--- a/food-delivery/public/index.html
+++ b/food-delivery/public/index.html
@@ -22,6 +22,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Food Delivery</title>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("user_nWQpPPVj3nQcsGbu0JCdV");
+      })();
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
